# rustyphoneapp

./: .App.tsx.swp  .gitignore  App.tsx  README.md  app.json  create_ndk_standalone.sh  package-lock.json  package.json
android/: settings.gradle
android/app/: build.gradle
android/app/src/main/java/com/rustyphoneapp/: .RustBridge.kt.swp  MainActivity.kt  MainApplication.kt  RustBridge.kt  RustPackage.kt
android/app/src/main/res/values/: strings.xml
ios/: Podfile  RustBridgeModule.m
ios/rustyphoneapp/: AppDelegate.mm  Info.plist  LaunchScreen.storyboard
ios/rustyphoneapp.xcodeproj/: project.pbxproj
ios/rustyphoneapp.xcodeproj/xcshareddata/xcschemes/: rustyphoneapp.xcscheme
ios/rustyphoneapp.xcworkspace/: contents.xcworkspacedata
ios/rustyphoneappTests/: rustyphoneappTests.m
rust/: .Cargo.toml.swp  Cargo.toml  Makefile  build_android.sh  build_ios.sh  copy_android.sh
rust/rustyphoneapp.xcframework/: Info.plist
rust/rustyphoneapp.xcframework/ios-arm64/Headers/: rustyphoneapp.h
rust/rustyphoneapp.xcframework/ios-x86_64-simulator/Headers/: rustyphoneapp.h
rust/src/: .lib.rs.swp  .string.rs.swp  lib.rs  string.rs
