[package]
name = "rustyphoneapp"
version = "0.1.0"
edition = "2021"

[lib]
name = "rustyphoneapp"
crate-type = ["staticlib", "cdylib"]

[dependencies]
libc = "0.2"
jni = { version = "0.5.2", optional = true, default-features = false }
rustybitcoin = { git = "https://github.com/calebCrackle/rustybitcoin.git", branch = "master"}

[features]
default = ["jni"]
